--- a/focus_tube/inject.css
+++ b/focus_tube/inject.css
@@ -1,6 +1,6 @@
 #related,
 #chip-bar,
-#chips-content,
+.focus-tube-home #chips-content,
 #shorts-inner-container,
 .focus-tube-home #contents,
 ytd-reel-shelf-renderer,
