--- a/focus_tube/inject.css
+++ b/focus_tube/inject.css
@@ -18,9 +18,10 @@ yt-tab-shape[tab-title="Shorts"] {
 
 /* watch/shorts page styles */
 
+
+/* #author-thumbnail, */
 #related,
 #pivot-button,
-#author-thumbnail,
 .html5-endscreen,
 .ytp-ce-video,
 .ytp-ce-playlist {
